# halmos

./: .env_test  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  halmos.toml  pyproject.toml  requirements-benchmark.txt  requirements-dev.txt  requirements.txt  skiplist.py
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yml  codeql.yml  copilot-setup-steps.yml  pre-commit.yml  publish-halmos-builder-package.yml  publish-halmos-package.yml  publish-pypi.yml  publish-solvers-package.yml  publish.yml  solvers-publish.yml  test-external.yml  test-ffi.yml  test-long.yml  test.yml
benchmarks/: baolean.sh
docs/: getting-started.md
examples/: README.md
examples/invariants/: README.md  foundry.toml  remappings.txt
examples/invariants/src/: ERC20.sol  ERC721.sol  MiniVat.sol
examples/invariants/test/: ERC20.t.sol  ERC721.t.sol  MiniVat.t.sol  Reentrancy.t.sol  SimpleState.t.sol  Vat.t.sol
examples/simple/: README.md  foundry.toml  remappings.txt
examples/simple/src/: BadElections.sol  IsPowerOfTwo.sol  MiniVat.sol  TotalPrice.sol  Vat.sol  Vault.sol
examples/simple/test/: BadElections.t.sol  BlockNumber.t.sol  EIP2935.t.sol  EIP7002.t.sol  Fork.t.sol  IsPowerOfTwo.t.sol  MiniVat.t.sol  Multicaller.t.sol  Reentrancy.t.sol  SimpleState.t.sol  TotalPrice.t.sol  Vat.t.sol  Vault.t.sol
examples/src/: Example.sol
examples/test/: Example.t.sol
examples/tokens/ERC20/: remappings.txt
examples/tokens/ERC4626/: foundry.toml
examples/tokens/ERC721/: foundry.toml  remappings.txt
src/halmos/: __main__.py  __main__.py.orig  assertions.py  bitvec.py  build.py  bv.py  byte2op.py  bytevec.py  calldata.py  cheatcodes.py  config.py  console.py  constants.py  contract.py  coverage.py  ctf.py  env.py  exceptions.py  flamegraphs.py  fuzzing.py  hashes.py  logs.py  mapper.py  memtrace.py  parser.py  pools.py  processes.py  serde.py  sevm.py  smtlib.py  solve.py  solvers.py  source_mapping.py  traces.py  ui.py  utils.py  warnings.py
src/halmos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/symtest/: __init__.py  __main__.py  byte2op.py  sevm.py  utils.py
tests/: conftest.py  errorHelper.sh  foundry.toml  remappings.txt  test_bitvec.py  test_bytevec.py  test_calldata.py  test_cli.py  test_config.py  test_dump_directory.py  test_executor.py  test_fixtures.py  test_global_executor.py  test_halmos.py  test_mapper.py  test_parser.py  test_prank.py  test_sevm.py  test_smtlib.py  test_solve.py  test_solver_integration.py  test_source_map.py  test_traces.py  test_utils.py
tests/data/: multi-contract-ast.json
tests/expected/: all.json  counter-symbolic.json  dei.json  erc20.json  erc721.json  ffi.json  invariants.json  list-symbolic.json  reset.json  simple.json  solver.json  storage-symbolic.json  toy.json
tests/ffi/: foundry.toml
tests/ffi/test/: Ffi.t.sol
tests/regression/: .env  foundry.toml  halmos.toml  remappings.txt
tests/src/: Counter.sol  Create.sol  List.sol  SignExtend.sol
tests/test/: Arith.t.sol  AssertTest.sol  AssertTest.t.sol  Block.t.sol  Buffers.sol  Byte.t.sol  Call.t.sol  Console.t.sol  Const.t.sol  Constructor.t.sol  Context.t.sol  Counter.t.sol  Create.t.sol  Create2.t.sol  Deal.t.sol  Ffi.t.sol  Foundry.t.sol  Getter.t.sol  HalmosCheatCode.t.sol  Invalid.t.sol  Library.t.sol  LibraryLinking.t.sol  List.t.sol  Math.t.sol  Natspec.t.sol  Opcode.t.sol  Prank.t.sol  Proxy.t.sol  Reset.t.sol  Revert.t.sol  Send.t.sol  Setup.t.sol  SetupPlus.t.sol  SetupSymbolic.t.sol  SignExtend.t.sol  SignedDiv.t.sol  SmolWETH.t.sol  Solver.t.sol  StaticContexts.t.sol  Storage.t.sol  (+7 more)
(+99 files in other folders)
