[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "halmos"
description = "A symbolic testing tool for EVM smart contracts"
readme = "README.md"
authors = [
    { name="a16z crypto" },
]
maintainers = [
    { name="Daejun Park" },
    { name="karmacoma <karma@coma.lol>" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "sortedcontainers>=2.4.0",
    "toml>=0.10.2",
    "z3-solver==4.12.6.0",
]
dynamic = ["version"]

[project.scripts]
halmos = "halmos.__main__:main"

[project.urls]
"Homepage" = "https://github.com/a16z/halmos"

[tool.black]
target-version = ["py311", "py312"]

[tool.pytest.ini_options]
# TODO: re-add test_traces.py when we have a better way to support it in CI
addopts = "--ignore=tests/lib --ignore=tests/test_traces.py"
# addopts = "--ignore=tests/lib"
